# UniqueWordsCounter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: hash.cpp  hashSetsComparison.cpp  longWords.cpp  method.h  openAddressingSet.cpp  sample.cpp  shortWords.cpp  wordsSet.cpp
benchmarks/method/: baseline.h  baseline_longWords.cpp  baseline_shortWords.cpp  customScanning.h  customScanning_longWords.cpp  customScanning_shortWords.cpp  optimizedBaseline.h  optimizedBaseline_longWords.cpp  optimizedBaseline_shortWords.cpp  producerConsumer.h  producerConsumer_longWords.cpp  producerConsumer_shortWords.cpp
benchmarks/utils/: textFiles.cpp  textFiles.h
cmake/: argparse.cmake  benchmark.cmake  boost.cmake  googleTest.cmake  tbb.cmake
data/: sample.txt
docs/: benchmarksClang.txt  benchmarksGCC.txt  benchmarksMSVC.txt  wordsSetClang.txt  wordsSetGCC.txt  wordsSetMSVC.txt
examples/: uniqueWordsCounter.cpp
include/UniqueWordsCounter/: methods.h
include/UniqueWordsCounter/utils/: getFile.h  hash.h  itemManager.h  itemManagerImpl.h  openAddressingSet.h  openAddressingSetBucket.h  openAddressingSetImpl.h  scanning.h  scanningImpl.h  textFiles.h  wordBucket.h  wordsSet.h  wordsSetImpl.h
src/: methods.cpp
src/method/: baseline.cpp  bufferScanning.cpp  concurrentSetProducerConsumer.cpp  distributedOpenAddressingSetProducerConsumer.cpp  distributedSetMemoryPool.cpp  optimizedBaseline.cpp  optimizedProducerConsumer.cpp  producerConsumer.cpp
src/method/parallel/: producerConsumer.cpp
src/method/sequential/: baseline.cpp  bufferScanning.cpp  customScanning.cpp
src/utils/: getFile.cpp  openAddressingSet.cpp  scanning.cpp  textFiles.cpp
src/utils/hash/: murmur64.cpp  polynomial.cpp
tests/: hash.cpp  methodsCorrectness.cpp  openAddressingSet.cpp  unorderedSetBuckets.cpp  wordsSet.cpp
tools/: benchmarks.sh  generateFile.cpp
